--- a/package.json
+++ b/package.json
@@ -3,16 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.19",
+    "@mui/material": "^5.15.4",
+    "@mui/x-charts": "^6.19.1",
+    "@react-google-maps/api": "^2.19.2",
+    "@react-spring/web": "^9.7.3",
+    "@tanstack/react-query": "^5.0.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
+    "framer-motion": "^10.18.0",
+    "google-map-react": "^2.2.1",
+    "gsap": "^3.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-draggable": "^4.4.6",
+    "react-fullscreen-loading": "^0.0.4",
+    "react-google-recaptcha": "^3.1.0",
+    "react-qr-reader": "^3.0.0-beta-1",
+    "react-quill": "^2.0.0",
+    "react-resizable": "^3.0.5",
+    "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
+    "react-simple-typewriter": "^5.0.1",
+    "react-spring": "^9.7.3",
+    "styled-components": "^6.1.8",
+    "swiper": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --host 172.10.0.75",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -34,5 +60,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.3"
   }
 }
